--- a/docroot/sites/all/themes/oira_frontend/less/header.less
+++ b/docroot/sites/all/themes/oira_frontend/less/header.less
@@ -229,6 +229,20 @@
     			}
 			}
 		}
+		#block-oira-partner-oira-partner-masquerade{
+			margin-top: 10px;
+			a.btn{
+				background-color: @color-menu-icons;
+				border-radius: 0px;
+				border: none;
+				padding: 6px 12px;
+				font-size: 16px;
+				float: right;
+				&:before{
+					content: "> ";
+				}
+			}
+		}
 	}
 }
 //if login-in
