--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -87,8 +87,14 @@
 		}
 		#block-lang-dropdown-language{
 			margin-right: 40px;
+			margin-bottom: 10px;
 			#lang-dropdown-select-language{
 				width: 117px !important;
+			}
+		}
+		#block-oira-partner-oira-partner-masquerade{
+			a.btn-primary{
+				width: 100%;
 			}
 		}
 	}
