--- a/docroot/sites/all/themes/oira_frontend/less/header.less
+++ b/docroot/sites/all/themes/oira_frontend/less/header.less
@@ -231,6 +231,15 @@
 		}
 		#block-oira-partner-oira-partner-masquerade{
 			margin-top: 10px;
+			> a{
+				color: @color-menu-icons;
+				font-style: italic;
+				font-weight: bolder;
+				float: right;
+				&:before{
+					content: "> ";
+				}
+			}
 			a.btn{
 				background-color: @color-menu-icons;
 				border-radius: 0px;
@@ -238,6 +247,9 @@
 				padding: 6px 12px;
 				font-size: 16px;
 				float: right;
+				color: white;
+				font-weight: normal;
+				font-style: normal;
 				&:before{
 					content: "> ";
 				}
