--- a/docroot/sites/all/themes/oira_frontend/less/header.less
+++ b/docroot/sites/all/themes/oira_frontend/less/header.less
@@ -1,3 +1,13 @@
+html[lang=fi]{
+	#block-menu-block-5{
+		.menu.nav{
+			li{
+				margin-left: -11px;
+			}
+		}
+	}
+}
+
 /*Estilos header
 **************************************************/
 .top-header{
