--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -5780,6 +5780,9 @@ div[id ^= "mini-panel-partner_in_"], {
 	    margin-bottom: 25px;
 	    color: @color-primary-dark;
 	}
+	#cboxCurrent{
+		display: none !important;
+	}
 	.images-filter-wrapper{
 		background-color: @color-primary-dark;
 		margin-bottom: 30px;
