--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1417,6 +1417,8 @@ a.more-link{
 	.panels-flexible-row.container-fluid{
 		padding-top: 30px;
 		background-color: @color-primary;
+		padding-top: 0px;
+    	padding-bottom: 0px;
 		.views-field-field-summary{
 			padding: 15px 0px 0px 0px;
 		}
