--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-480.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-480.less
@@ -39,3 +39,27 @@
 
 
 }
+
+@media only screen and (max-width : 560px) {
+
+	.oira-tools-search-page .field.field-name-field-country,
+	.page-promotional-resources-search .field.field-name-field-country,
+	.page-search-site .field.field-name-field-country,
+	.oira-tools-search-page .field-type-language-field,
+	.page-promotional-resources-search .field-type-language-field,
+	.page-search-site .field-type-language-field,
+	.oira-tools-search-page .field-name-field-sector,
+	.page-promotional-resources-search .field-name-field-sector,
+	.page-search-site .field-name-field-sector,
+	.oira-tools-search-page .field-name-field-promotional-material-type,
+	.page-promotional-resources-search .field-name-field-promotional-material-type,
+	.page-search-site .field-name-field-promotional-material-type,
+	.oira-tools-search-page .field-name-pr-language,
+	.page-promotional-resources-search .field-name-pr-language,
+	.page-search-site .field-name-pr-language {
+	    width: 100%;
+		margin-bottom: 5px;
+	}
+
+
+}
