MDR-2386 - OiRA: add pictures copyright

--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -1,5 +1,11 @@
 @media only screen and (max-width : 767px){
 
+blockquote.image-field-caption {
+    p{
+		max-width: 430px;
+    }
+}
+
 .img-responsive{
 	//width: 100%;
 }
