--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -12883,6 +12883,44 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
 #act-as-partner .modal-footer button:before {
   content: "> ";
 }
+/*end act as a partner modal*/
+blockquote.image-field-caption {
+  color: #FFFF;
+  z-index: 99;
+  border-left: 0;
+  position: relative;
+  padding: 0;
+  margin: 0;
+}
+blockquote.image-field-caption p {
+  z-index: 999;
+  position: absolute;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  margin-top: -25px;
+  padding-left: 1em;
+  background: rgba(145, 123, 162, 0.85);
+  font-size: 1.1rem;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+body.front .view-slideshow blockquote.image-field-caption p,
+.panels-flexible-region-new-image-inside blockquote.image-field-caption p {
+  position: absolute;
+  bottom: 0;
+  color: #FFF !important;
+  background: transparent;
+  opacity: 1;
+  z-index: 40;
+  right: 0%;
+  text-shadow: 1px 1px #000;
+  font-size: 1.1rem;
+  border-left: 0;
+  padding: 10px 20px;
+  margin: 0;
+  text-align: right;
+}
 /*FOOTER
 ********************************************/
 .site-footer {
@@ -14520,6 +14558,9 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   }
 }
 @media only screen and (max-width: 767px) {
+  blockquote.image-field-caption p {
+    max-width: 430px;
+  }
   .searched-text {
     font-size: 2em !important;
   }
