--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -6040,3 +6040,44 @@ div[id ^= "mini-panel-partner_in_"], {
 }
 /*end act as a partner modal*/
 
+blockquote.image-field-caption {
+    color: #FFFF;
+    z-index: 99;
+    border-left: 0;
+    position: relative;
+    padding: 0;
+    margin:0;
+    p{
+  		z-index: 999;
+	    position: absolute;
+	    width: 100%;
+	    margin: 0;
+	    padding: 0;
+	    margin-top: -25px;
+	    padding-left: 1em;
+	    background: rgba(145,123,162,0.85);
+	    font-size: 1.1rem;
+	    padding-top: 5px;
+	    padding-bottom: 5px;
+    }
+}
+
+
+
+
+body.front .view-slideshow blockquote.image-field-caption p,
+.panels-flexible-region-new-image-inside  blockquote.image-field-caption p{
+	position: absolute;
+    bottom: 0;
+    color: #FFF !important;
+    background: transparent;
+    opacity: 1;
+    z-index: 40;
+    right: 0%;
+    text-shadow: 1px 1px #000;
+    font-size: 1.1rem;
+    border-left: 0;
+    padding: 10px 20px;
+    margin: 0;
+    text-align: right;
+}
