--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -1396,7 +1396,9 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 }
 
 /*End private zone*/
-
+.page-promotional-resources .panels-flexible-row-page-promotional-materials-1 .promotional-introduction-item:nth-child(3){
+	padding-top: 0;
+}
 
 }
 
