--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -2375,14 +2375,15 @@ a.more-link{
 			overflow: auto;
 			margin-bottom: 30px;
 			.views-field-field-flag{
-				margin: 30px 30px 0px 30px;
+				margin: 20px 20px 0px 20px;
+				float: left;
 				img{
 					max-height: 67px;
 					min-height: 67px;
 				}
 			}
 			.views-field-name-field{
-				margin: 30px 30px 0px 30px;
+				margin: 20px 20px 0px 20px;
 				h2{
 					font-size: @font-size2;
 					a{
@@ -2390,11 +2391,12 @@ a.more-link{
 						font-family: "Roboto";
 						font-weight: bold;
 						min-height: 70px;
+						font-size: 0.9em;
 					}
 				}
 			}
 			.views-field-country-content-count{
-				margin: 0px 30px 30px 30px;
+				margin: 0px 20px 20px 20px;
 				.form-group{
 					margin-bottom: 0px;
 				}
