--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -1400,6 +1400,14 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 	padding-top: 0;
 }
 
+.page-eu-national-partners .view-id-countries .views-item-columns-container	.views-field-field-flag{
+	float: left;
+}
+
+.page-eu-national-partners .view-id-countries .views-item-columns-container .views-field-name-field h2 a{
+	font-size: 0.8em;
+}
+
 }
 
 //this is only to adjust filters to the correct position
