--- a/docroot/sites/all/themes/oira_frontend/less/responsive-min-1200.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-min-1200.less
@@ -1,1 +1,8 @@
+@media only screen and (max-width : 1280px) {
 
+.page-eu-national-partners .view-id-countries .views-item-columns-container	.views-field-field-flag{
+	float: none;
+}
+
+
+}
