--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -1,5 +1,10 @@
 @media only screen and (max-width : 767px){
 
+.margin-line {
+	padding-left: 15px;
+    padding-right: 15px;
+}
+
 blockquote.image-field-caption {
     p{
 		max-width: 430px;
@@ -48,7 +53,7 @@ blockquote.image-field-caption {
 			#block-menu-block-5{
 				position: absolute;
 				bottom: 0px;
-				right: 58px;
+				right: 30px;
 				top: 5px;
 				margin-right: 15px;
 				.introduction-image{
