--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -7596,7 +7596,7 @@ a.more-link:before {
 }
 #block-system-main .panels-flexible-row-new-9 .view-display-id-attachment_1 {
   border-bottom: 2px solid #967ea7;
-  padding-bottom: 30px;
+  padding-bottom: 15px;
   padding-top: 20px;
   margin-bottom: 20px;
 }
@@ -7605,6 +7605,7 @@ a.more-link:before {
 }
 #block-system-main .panels-flexible-row-new-9 .view-display-id-attachment_1 .more-link {
   text-align: left;
+  margin-top: 5px;
 }
 #block-system-main .panels-flexible-row-new-9 .views-item-columns-container {
   background-color: #ffffff;
