--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -755,7 +755,7 @@ a.more-link{
 		}
 		.view-display-id-attachment_1{
 			border-bottom: 2px solid @color-text-purple;
-			padding-bottom: 30px;
+			padding-bottom: 15px;
 			padding-top: 20px;
 			margin-bottom: 20px;
 			.field-name-field-image{
@@ -771,6 +771,7 @@ a.more-link{
 			}
 			.more-link{
 				text-align: left;
+				margin-top: 5px;
 			}
 		}
 		.views-item-columns-container{
